--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 appdirs==1.4.3
+dj-database-url==0.4.2
 Django==1.10.3
 django-crispy-forms==1.6.1
 djangorestframework==3.6.2
+gunicorn==19.7.1
 packaging==16.8
 pkg-resources==0.0.0
 pyparsing==2.2.0
 pytz==2017.2
 six==1.10.0
+whitenoise==3.3.0
+psycopg2==2.6.2
